CSS for adding scrollbars to the Location and People panels. Accepts issue 74
git-svn-id: https://civic-crm.googlecode.com/svn/trunk@341 4e447b6a-6056-7046-2609-0fe1680c5616

--- a/html/skins/local/screen.css
+++ b/html/skins/local/screen.css
@@ -78,6 +78,11 @@ tbody th { text-align:right; }
 	margin-left:295px; padding-left:10px; overflow:auto; border-left:1px solid #cccccc;
 }
 
+#location-panel,
+#person-panel {
+	max-height:250px; overflow:auto;
+}
+
 .locationInfo > div { margin:.5em 0; }
 .findPeople { width:290px; float:left; }
 
